--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Bubbels</title>
+    <title>Bubbles</title>
 </head>
 
 <body>
 
-    <div class="bubbels">
-      <div class="bubbel"></div>
-      <div class="bubbel"></div>
-      <div class="bubbel"></div>
-      <div class="bubbel"></div>
-      <div class="bubbel"></div>
-      <div class="bubbel"></div>
-      <div class="bubbel"></div>
-      <div class="bubbel"></div>
-      <div class="bubbel"></div>
-      <div class="bubbel"></div>
+    <div class="bubbles">
+     <div class="bubble"></div>
+     <div class="bubble"></div>
+     <div class="bubble"></div>
+     <div class="bubble"></div>
+     <div class="bubble"></div>
+     <div class="bubble"></div>
+     <div class="bubble"></div>
+     <div class="bubble"></div>
+     <div class="bubble"></div>
+     <div class="bubble"></div>
 
     </div>
 </body>
